add registration handler to swagger
